# Dive_into_DL

./: README.md  pyproject.toml
d2l-en/pytorch/chapter_22_appendix-mathematics-for-deep-learning/: distributions.ipynb
d2l-en/pytorch/chapter_2_preliminaries/: autograd.ipynb  calculus.ipynb  linear-algebra.ipynb  lookup-api.ipynb  ndarray.ipynb  pandas.ipynb  probability.ipynb
d2l-en/pytorch/chapter_3_linear-regression/: linear-regression-concise.ipynb  linear-regression-scratch.ipynb  linear-regression.ipynb  oo-design.ipynb  synthetic-regression-data.ipynb  weight-decay.ipynb
d2l-en/pytorch/chapter_appendix-mathematics-for-deep-learning/: eigendecomposition.ipynb
d2l-en/pytorch/chapter_preliminaries/: ndarray.ipynb
