[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sunya", email = "ydsunyan123@gmail.com"},
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "d2l>=1.0.3",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121/"
verify_ssl = true

[tool.pdm.scripts]
post_install = "pdm plugin add pdm-plugin-torch==23.2.0"

[tool.pdm.plugins.torch]
dependencies = [
   "torch>=2.1.0"
]
lockfile = "torch.lock"
enable-cpu = true

enable-rocm = false
rocm-versions = ["4.2"]

enable-cuda = true
cuda-versions = ["cu121", "cu123"]